<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        android:text="Distance (km)"
        app:layout_constraintBottom_toTopOf="@+id/etInputDistance"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etInputDistance"
        android:layout_width="264dp"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="128dp"
        android:layout_toEndOf="@+id/tvShowPace"
        android:ems="10"
        android:hint="@string/enter_distance"
        android:inputType="textPersonName|number"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etInputTime"
        android:layout_width="274dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/enter_duration"
        android:inputType="textPersonName|number"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/etInputDistance" />

    <TextView
        android:id="@+id/tvShowSpeed"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tvShowPace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvShowPace"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/tvShowSpeed" />

    <Button
        android:id="@+id/btnCalc"
        style="@style/AppTheme"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="136dp"
        android:text="@string/btnCalc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnClear"
        style="@style/AppTheme"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="136dp"
        android:text="@string/btnClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="47dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="Speed"
        app:layout_constraintEnd_toStartOf="@+id/tvShowSpeed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvShowSpeed" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pace"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/tvShowPace" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Time (min)"
        app:layout_constraintStart_toStartOf="@+id/etInputDistance"
        app:layout_constraintTop_toBottomOf="@+id/etInputDistance" />

</android.support.constraint.ConstraintLayout>